# research-daily-report

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-report.yml
config/: sources.yaml
daily_research_report/: __init__.py  cli.py  collectors.py  compiler.py  config.py  curation.py  dedup.py  feishu.py  llm.py  models.py  render.py  time_utils.py
reports/: 2026-06-02.html  2026-06-02.md  2026-06-03.html  2026-06-03.json  2026-06-03.md  2026-06-04.html  2026-06-04.json  2026-06-04.md  2026-06-05.html  2026-06-05.json  2026-06-05.md  2026-06-06.html  2026-06-06.json  2026-06-06.md  2026-06-07.html  2026-06-07.json  2026-06-07.md
templates/: report.html.j2
