[project]
name = "research-daily-report"
version = "0.1.0"
description = "Generate a research-institute style daily news report and push it to Feishu."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "feedparser>=6.0.11",
  "jinja2>=3.1.4",
  "markdown>=3.6",
  "openai>=1.40.0",
  "python-dateutil>=2.9.0.post0",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
]

[project.scripts]
research-daily = "daily_research_report.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
